# parallel_project

./: CMakeLists.txt  Dockerfile  README.md  docker_entrypoint.sh  docker_entrypoint_prof.sh  job.sh  profiling_analysis_1000.txt  profiling_analysis_10000.txt
src/: Colour.cpp  Colour.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Population.cpp  Population.h  Problem.cpp  Problem.h  Problem1.cpp  Problem1.h  conf.cpp  conf.h  image.c  image.h  main.c  main.cpp  utils.cpp  utils.h
