cmake_minimum_required(VERSION 2.8)
project (ParallelGenetic)
find_package( OpenCV REQUIRED )
SET(CMAKE_C_COMPILER mpicc)
SET(CMAKE_CXX_COMPILER mpicxx)
add_executable(ParallelGenetic src/main.cpp src/Problem.cpp src/Problem.h src/GeneticAlgorithm.cpp src/GeneticAlgorithm.h src/Population.cpp src/Population.h src/Individual.cpp src/Individual.h src/Polygon.cpp src/Polygon.h src/Colour.cpp src/Colour.h src/Point.cpp src/Point.h src/utils.cpp src/utils.h src/conf.h)
#target_compile_options(ParallelGenetic PRIVATE -std=c++11 -g ) # -Wall -Wextra -pedantic -Werror - -gO3)
target_compile_options(ParallelGenetic PRIVATE -std=c++11 -Wall -Wextra -pedantic -Werror -O3)
target_link_libraries( ParallelGenetic ${OpenCV_LIBS} )
target_link_libraries( ParallelGenetic mpi )
